@@ -13,7 +13,7 @@ use Pandoc::Walker;
 use Pandoc::Elements ();
 
 use parent 'Exporter';
-our @EXPORT = qw(pandoc_filter stringify);
+our @EXPORT = qw(pandoc_filter pandoc_walk stringify);
 
 sub stringify {
     join '', @{
@@ -24,10 +24,14 @@ sub stringify {
     };
 }
 
-sub pandoc_filter(@) { ## no critic
+sub pandoc_walk(@) { ## no critic
     my $filter = Pandoc::Filter->new(@_);
     my $ast = Pandoc::Elements::pandoc_json(<STDIN>);
     $filter->apply($ast);
+}
+
+sub pandoc_filter(@) { ## no critic
+    my $ast = pandoc_walk(@_);
     my $json = JSON->new->utf8->allow_blessed->convert_blessed->encode($ast);
     #my $json = $ast->to_json; # TODO
     say STDOUT $json;
@@ -144,6 +148,10 @@ AST as single line of JSON. This function is roughly equivalent to
     my $ast = Pandoc::Elements::pandoc_json(<>);
     Pandoc::Filter->new(@actions)->apply($ast);
     say $ast->to_json;
+
+=head2 pandoc_walk( @actions | %actions )
+
+Read a single line of JSON from STDIN and walk down the AST.
 
 =head2 stringify( $ast )
 
